--- a/index.html
+++ b/index.html
@@ -827,69 +827,76 @@
           </div>
           <div class="timeline-content">
             <h3>1st Prize – HackAtom 2024 (ROSATOM)</h3>
-            <p class="timeline-date">March 2024</p>
+            <p class="timeline-date">August 2024</p>
             <p>Developed atomic technology solution with ROSATOM</p>
             <a href="#" class="timeline-link">See Certificate <i class="fas fa-arrow-right"></i></a>
           </div>
-        </div>
-        
-        <div class="timeline-item">
-          <div class="timeline-icon">
-            <i class="fas fa-globe-asia"></i>
-          </div>
-          <div class="timeline-content">
-            <h3>JENESYS 2024 Delegate to Japan</h3>
-            <p class="timeline-date">February 2024</p>
-            <p>Represented Myanmar in youth exchange program</p>
-            <a href="#" class="timeline-link">See Photos <i class="fas fa-arrow-right"></i></a>
-          </div>
-        </div>
-        
+        </div>      
+
         <div class="timeline-item">
           <div class="timeline-icon">
             <i class="fas fa-robot"></i>
           </div>
           <div class="timeline-content">
             <h3>AAET Engineering Showcase</h3>
-            <p class="timeline-date">December 2023</p>
+            <p class="timeline-date">September 2024</p>
             <p>Featured project demonstrating AI-powered automation</p>
             <a href="#" class="timeline-link">See Project <i class="fas fa-arrow-right"></i></a>
           </div>
         </div>
-
-        <div class="timeline-item">
-          <div class="timeline-icon">
-            <i class="fas fa-seedling"></i>
-          </div>
-          <div class="timeline-content">
-            <h3>WED Engineering Day Hackathon</h3>
-            <p class="timeline-date">March 2025</p>
-            <p>Designed and prototyped a smart farming solution</p>
-            <a href="#" class="timeline-link">See Details <i class="fas fa-arrow-right"></i></a>
-          </div>
-        </div>
-
         <div class="timeline-item">
           <div class="timeline-icon">
             <i class="fas fa-recycle"></i>
           </div>
           <div class="timeline-content">
             <h3>Myanmar 100-Year Engineering Hackathon</h3>
-            <p class="timeline-date">January 2025</p>
+            <p class="timeline-date">November 2025</p>
             <p>Developed AI-powered robotic waste sorter with 92–95% accuracy</p>
             <a href="#" class="timeline-link">See Demo <i class="fas fa-arrow-right"></i></a>
           </div>
         </div>
-
+        <div class="timeline-item">
+          <div class="timeline-icon">
+            <i class="fas fa-seedling"></i>
+          </div>
+          <div class="timeline-content">
+            <h3>WED Engineering Day Hackathon</h3>
+            <p class="timeline-date">December 2024</p>
+            <p>Designed and prototyped a smart farming solution</p>
+            <a href="#" class="timeline-link">See Details <i class="fas fa-arrow-right"></i></a>
+          </div>
+        </div>
+        <div class="timeline-item">
+          <div class="timeline-icon">
+            <i class="fas fa-globe-asia"></i>
+          </div>
+          <div class="timeline-content">
+            <h3>JENESYS 2024 Delegate to Japan</h3>
+            <p class="timeline-date">January 2025</p>
+            <p>Represented Myanmar in youth exchange program</p>
+            <a href="#" class="timeline-link">See Photos <i class="fas fa-arrow-right"></i></a>
+          </div>
+        </div>
         <div class="timeline-item">
           <div class="timeline-icon">
             <i class="fas fa-microchip"></i>
           </div>
           <div class="timeline-content">
             <h3>Industrial Project – STM32 System</h3>
-            <p class="timeline-date">Ongoing</p>
+            <p class="timeline-date">March 2025</p>
             <p>Built and deployed full-scale industrial color dispensing solution</p>
             <a href="#" class="timeline-link">See Case Study <i class="fas fa-arrow-right"></i></a>
+          </div>
+        </div>
+        <div class="timeline-item">
+          <div class="timeline-icon">
+            <i class="fas fa-recycle"></i>
+          </div>
+          <div class="timeline-content">
+            <h3>REGAN ASIA SUMMIT</h3>
+            <p class="timeline-date">June 2025</p>
+            <p>Regeneration of Asia Summit in Singapore</p>
+            <a href="#" class="timeline-link">See Demo <i class="fas fa-arrow-right"></i></a>
           </div>
         </div>
       </div>
